# Wheatley

./: .coverage  .gitignore  AGENTS.md  AI_Graph.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PoC.py  README.md  README_AI.md  ad_nauseam.py  animations.json  install_prerequisites.py  old_inspiration.py  pytest.ini  requirements.txt  system check.ps1  timings.json
.github/: CODEOWNERS
Weatly/python/: pyproject.toml  requirements.txt
Weatly/python/ino/M5 stack Core2/: test.ino
Weatly/python/src/: README_AI.md  assistant.py  main.py  test.py
Weatly/python/src/assistant/: assistant.py
Weatly/python/src/config/: config.example.yaml
Weatly/python/src/hardware/: README_AI.md  arduino_interface.py
Weatly/python/src/llm/: README_AI.md  google_agent.py  llm_client.py
Weatly/python/src/stt/: stt_engine.py
Weatly/python/src/tts/: tts_engine.py
Weatly/python/src/utils/: audio.py  gpt.py  rate_limit.py  timer.py
Weatly/python/tests/: test_arduino.py  test_llm.py  test_stt.py  test_tts.py
docs/: Code_logic.md  LLM_logic.md  Wiering_diagram.md  architecture_overview.md  component_communication.md  detailed_event_flow.md  hardware_command_flow.md  long-term-memory.md  personality-switcher.md  present-timeline.md  service-authentication.md  speaker-warmup.md  stt-threshold-calibration.md  timing-logging.md  tts_and_hotword_flow.md
wheatley/: AI_Graph.md  README_AI.md  __init__.py  __main__.py  long_term_memory.json  main.py  present_timeline.py  puppet.py  requirements.txt  service_auth.py  test.py  timings.json
wheatley_V2/: MCP1.py  MCP2.py  PoC.py  (+8 more)
(+110 files in other folders)
