[tool]
name = "project-name"
version = "0.1.0"
description = "A Python application for TTS/STT/LLM workflow with Arduino integration."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "tensorflow",  # or "torch" depending on your model
    "flask",       # if you're using Flask for a web interface
    "pyserial"     # for Arduino communication
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"